fix(ci): other attempt to get correct auth

--- a/semantic-release.gitlab-ci.yml
+++ b/semantic-release.gitlab-ci.yml
@@ -7,9 +7,8 @@ stages:
   image: $REGISTRY/semantic-release:v1.0.0
   stage: release
   before_script:
-    - git config --global credential.http://gitlab.dev.yelo.inet.telenet.be.username semrelbot
-    - git config --global credential.helper 'store --file /.gitcredentials'
-    - echo -n "http://semrelbot:${GITLAB_TOKEN}@gitlab.dev.yelo.inet.telenet.be" > /.gitcredentials
+    - CI_PUSH_REPO=$(echo ${CI_REPOSITORY_URL} | | sed -r 's#^(https?://).*?@(.*)$#\1\2#')
+    - git remote set-url --push origin "${CI_PUSH_REPO}"
   script:
     - semantic-release --branches $CI_DEFAULT_BRANCH --debug --dry-run --plugins '@semantic-release/commit-analyzer'
   rules:
