fix(ci): no such thing --fetch

--- a/semantic-release.gitlab-ci.yml
+++ b/semantic-release.gitlab-ci.yml
@@ -8,8 +8,7 @@ stages:
   stage: release
   script:
     - CI_PUSH_REPO=$(echo ${CI_REPOSITORY_URL} | sed -r 's#^(https?://).*?@(.*)$#\1semrelbot:${GITLAB_TOKEN}\2#')
-    - git remote set-url --push origin "${CI_PUSH_REPO}"
-    - git remote set-url --fetch origin "${CI_PUSH_REPO}"
+    - git remote set-url origin "${CI_PUSH_REPO}"
     - semantic-release --branches $CI_DEFAULT_BRANCH --debug --dry-run --plugins '@semantic-release/commit-analyzer'
   rules:
     - if: $CI_DEFAULT_BRANCH == $CI_COMMIT_BRANCH
