--- a/semantic-release.gitlab-ci.yml
+++ b/semantic-release.gitlab-ci.yml
@@ -7,7 +7,7 @@ stages:
   image: $REGISTRY/semantic-release:v1.1.0
   stage: release
   script:
-    - semantic-release --debug --dry-run --extends @enttribe/semantic-release-config
+    - semantic-release --debug --dry-run --no-ci --extends @enttribe/semantic-release-config
   rules:
     - if: $CI_DEFAULT_BRANCH == $CI_COMMIT_BRANCH
 
