Fix semrel auth

--- a/gitlab-http-access.gitlab-ci.yml
+++ b/gitlab-http-access.gitlab-ci.yml
@@ -7,6 +7,8 @@
     GITLAB_USERAUTH: "${CI_JOB_TOKEN}"
   before_script:
     - URL_SCHEME_ISH=$(echo "${CI_SERVER_URL}" | awk -F/ '{print $1}')
+    - GITLAB_AUTHENTICATED_URL="${URL_SCHEME_ISH}//${GITLAB_USERNAME}:${GITLAB_USERAUTH}@${CI_SERVER_HOST}"
+    - GITLAB_AUTHENTICATED_REPO_URL="${GITLAB_AUTHENTICATED_URL}/${CI_PROJECT_PATH}.git"
     - git config --global url."${URL_SCHEME_ISH}//${GITLAB_USERNAME}:${GITLAB_USERAUTH}@${CI_SERVER_HOST}".insteadOf "${CI_SERVER_URL}"
 
 ...
