feat(TIONSATRIB-2885): move semantic-release out of debug phase

--- a/semantic-release.gitlab-ci.yml
+++ b/semantic-release.gitlab-ci.yml
@@ -11,7 +11,7 @@ stages:
   image: $REGISTRY/semantic-release:v1.1.0
   stage: release
   script:
-    - GL_TOKEN=${SEMANTICRELEASE_TOKEN} semantic-release --debug --extends @enttribe/semantic-release-config --repository-url "${GITLAB_AUTHENTICATED_REPO_URL}"
+    - GL_TOKEN=${SEMANTICRELEASE_TOKEN} semantic-release --extends @enttribe/semantic-release-config --repository-url "${GITLAB_AUTHENTICATED_REPO_URL}"
   rules:
     - if: $CI_DEFAULT_BRANCH == $CI_COMMIT_BRANCH
 
