feat(ci): allow better git auth override names and defaults for semantic release
this should allow working pushes on less CI variable configured repositories
One requirement that remains though is that semantic-release-bot user
or renovate group is having access rights on the repository

--- a/semantic-release.gitlab-ci.yml
+++ b/semantic-release.gitlab-ci.yml
@@ -6,6 +6,11 @@ stages:
   - release
 
 .semantic-release:
+  variables:
+    SEMANTIC_RELEASE_USER: semantic-release-bot
+    SEMANTIC_RELEASE_AUTH: ${SEMANTICRELEASE_TOKEN}
+    GITLAB_USERNAME: ${SEMANTIC_RELEASE_USER}
+    GITLAB_USERAUTH: ${SEMANTIC_RELEASE_AUTH}
   extends:
     - .gitlab_http_access
   image: $REGISTRY/semantic-release:v1.1.0
