--- a/gitlab-http-access.gitlab-ci.yml
+++ b/gitlab-http-access.gitlab-ci.yml
@@ -22,7 +22,7 @@
   variables:
     GITLAB_USERNAME: gitlab-ci-token
     GITLAB_USERAUTH: "${CI_JOB_TOKEN}"
-    GITLAB_GIT_REPLACE_SSH_BY_HTTP: false
+    GITLAB_GIT_REPLACE_SSH_BY_HTTP: 'false'
   before_script:
     - URL_SCHEME_ISH=$(echo "${CI_SERVER_URL}" | awk -F/ '{print $1}')
     - GITLAB_AUTHENTICATED_URL="${URL_SCHEME_ISH}//${GITLAB_USERNAME}:${GITLAB_USERAUTH}@${CI_SERVER_HOST}"
