feat: Move templates around + add ansible templates
In regards to offer some standardized job and pipeline templates a first step is taken
to this end by moving around existing templates to jobs/ or pipeline/ folders.

done:
- move gitlab http to jobs/utils/
- move semantic release to jobs/releasing/
- add ansible-test job to jobs/testing/ansible/
- add ansible-molecule job to jobs/testing/ansible/
- add ansible pipeline to pipelines/
- add docker-dind service to services/

BREAKING CHANGE: users of semantic-release.gitlab-ci.yml or gitlab-http-access.gitlab-ci.yml should move their includes
include:
  - project: automation/cicd/templates
    version: <latest>
    file: => FROM: gitlab-http-access.gitlab-ci.yml TO: jobs/utils/gitlab-http-access.gitlab-ci.yml
  - project: automation/cicd/templates
    version: <latest>
    file: => FROM: demantic-release.gitlab-ci.yml TO: jobs/releasing/semantic-release.gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 ---
 
-include: semantic-release.gitlab-ci.yml
+include: 
+  - local: /jobs/releasing/semantic-release.gitlab-ci.yml
 
 stages:
   - release
