--- a/jobs/building/containers/kaniko.gitlab-ci.yml
+++ b/jobs/building/containers/kaniko.gitlab-ci.yml
@@ -19,7 +19,7 @@ include:
 # eg.:
 #  include:
 #    - project: automation/cicd/templates
-#      version: ${project latest version}
+#      ref: ${project latest version}
 #      file: jobs/building/containers/kaniko.gitlab-ci.yml
 #  stages:
 #    - build
