--- a/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
+++ b/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
@@ -38,5 +38,7 @@ molecule:
         molecule ${MOLECULE_CMD_OPTS} test --scenario-name "${scenario}" ${MOLECULE_TEST_CMD_OPTS}
         echo " ------- END: Running scenario ${scenario} ------- "
       done
+  rules:
+    - when: never
 
 ...
