feat: ENTTRIBE-42579: Rule-less semantic-release
Also support NPM plugin for semantic-release (token and internal repository configuration)

BREAKING CHANGE: Only rule left is limiting semantic-release to be ran on a tag push (typically pushed by semantic-release)
                 This is considered to be breaking as the branches are not limited anymore to a currated set:
                 (develop, development, main, master, CI_DEFAULT_BRANCH, alpha, beta, next, next-major, (stable-)?v?X.x.x)
                 Curration of semantic-release has shifted to the config is extends off. In your repository you can now define
                 a .releaserc (and a few alternate namings) containing eg
                 ```
                 branching:
                   model: gitflow
                 ```
                 if your repository uses gitflow model
                 Though still correcting that only defines the release and prerelease branches, but semantic-release will still be
                 ran on eg feature/* branches as a job, exiting early (no failure) that nothing will be done.

--- a/jobs/releasing/semantic-release.gitlab-ci.yml
+++ b/jobs/releasing/semantic-release.gitlab-ci.yml
@@ -30,20 +30,22 @@ include:
 #   - release
 
 semantic-release:
-  extends:
-    - .gitlab_http_access
   variables:
     SEMANTIC_RELEASE_USER: semantic-release-bot
     SEMANTIC_RELEASE_AUTH: ${SEMANTICRELEASE_TOKEN}
     GITLAB_USERNAME: ${SEMANTIC_RELEASE_USER}
     GITLAB_USERAUTH: ${SEMANTIC_RELEASE_AUTH}
+    NPM_TOKEN: ${YARN_AUTH_TOKEN}
+    NPM_CONFIG_REGISTRY: ${NEXUS_URL}/repository/npm-internal
+    GL_TOKEN: ${SEMANTICRELEASE_TOKEN}
   image: $REGISTRY/semantic-release
   stage: release
+  before_script:
+    - !reference [.gitlab_http_access, before_script]
   script:
-    - GL_TOKEN=${SEMANTICRELEASE_TOKEN} semantic-release --extends @enttribe/semantic-release-config --repository-url "${GITLAB_AUTHENTICATED_REPO_URL}"
+    - semantic-release --extends @enttribe/semantic-release-config --repository-url "${GITLAB_AUTHENTICATED_REPO_URL}"
   rules:
-    - if: $CI_DEFAULT_BRANCH == $CI_COMMIT_BRANCH
-    - if: $CI_COMMIT_BRANCH =~ /^(alpha|beta|next|next-major)$/
-    - if: $CI_COMMIT_BRANCH =~ /^(stable-)?v?([0-9]+)(\.([0-9]+|x))?\.x$/
+    - if: $GITLAB_USER_LOGIN == 'semantic-release-bot'
+      when: never
 
 ...
