feat: TVOTTTM-196: switch ansible container to new multi build production location

--- a/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
+++ b/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
@@ -25,7 +25,7 @@ molecule:
     MOLECULE_TEST_CMD_OPTS: ''
   parallel: 4
   stage: test
-  image: $REGISTRY/ansible/molecule
+  image: $REGISTRY/automation/containers/ansible-molecule:production
   script:
     - |-
       set -x
