--- a/jobs/building/containers/kaniko.gitlab-ci.yml
+++ b/jobs/building/containers/kaniko.gitlab-ci.yml
@@ -1,10 +1,9 @@
 ---
 
-include:
-  - local: jobs/builing/containers/kaniko.gitlab-ci.yml
-  - local: jobs/utils/aws/aws-ecr-login.gitlab-ci.yml
+include: 
+  - local: /jobs/utils/supported-os-matrix.gitlab-ci.yml
 
-# This job template can be used to build containers from Dockerfiles using kaniko and authenticate against ECR
+# This job template can be used to build containers from Dockerfiles using kaniko
 #
 # KANIKO_COMMAND should contain anything you need:
 #   - proxy settings as build-arg's
@@ -21,27 +20,24 @@ include:
 #  include:
 #    - project: automation/cicd/templates
 #      ref: ${project latest version}
-#      file: jobs/building/containers/kaniko-ecr.gitlab-ci.yml
+#      file: jobs/building/containers/kaniko.gitlab-ci.yml
 #  stages:
 #    - build
 #  job1:
-#    extends: .kaniko_ecr
+#    extends: .kaniko
 #    script:
 #      - ${KANIKO_COMMAND} --dockerfile Dockerfile --build-arg something=true --destination $REGISTRY/<namespace>/<container_id>:<tag>
 
-.kaniko_ecr:
-  extends:
-    - .aws_ecr_login
+.kaniko:
   stage: build
   image:
     name: gcr.io/kaniko-project/executor:debug
     entrypoint: [""]
   before_script:
-    - !reference [.aws_ecr_login, before_script]
     - |-
        mkdir -p /kaniko/.docker
        KANIKOPROXYBUILDARGS=""
-       KANIKOCFG="{ \"auths\":{\"${ECR_REGISTRY}\":{\"username\":\"${ECR_USERNAME}\",\"password\":\"${ECR_PASSWORD}\"}}"
+       KANIKOCFG="{ \"auths\":{\"$REGISTRY\":{\"username\":\"$NEXUS_USER\",\"password\":\"$NEXUS_PASS\"}}"
        if [ "x${HTTP_PROXY}" != "x" -o "x${HTTPS_PROXY}" != "x" ]; then
          KANIKOCFG="${KANIKOCFG}, \"proxies\": { \"default\": { \"httpProxy\": \"${HTTP_PROXY}\", \"httpsProxy\": \"${HTTPS_PROXY}\", \"noProxy\": \"${NO_PROXY}\"}}"
          KANIKOPROXYBUILDARGS="${KANIKOPROXYBUILDARGS} --build-arg http_proxy=${HTTP_PROXY} --build-arg https_proxy=${HTTPS_PROXY} --build-arg no_proxy=${NO_PROXY}"
