fix: comment currently broken ansible-lint stage
ansible-lint seems to require role and collection download, ...

yamllint is active though, that one works

--- a/jobs/testing/ansible/ansible-lint.gitlab-ci.yml
+++ b/jobs/testing/ansible/ansible-lint.gitlab-ci.yml
@@ -18,10 +18,10 @@ yamllint:
   script:
     - yamllint .
 
-ansible-lint:
-  stage: test
-  image: $REGISTRY/automation/containers/ansible-molecule:production
-  script:
-    - ansible-lint
+# ansible-lint:
+#   stage: test
+#   image: $REGISTRY/automation/containers/ansible-molecule:production
+#   script:
+#     - ansible-lint
 
 ...
