--- a/jobs/building/containers/kaniko-ecr.gitlab-ci.yml
+++ b/jobs/building/containers/kaniko-ecr.gitlab-ci.yml
@@ -24,6 +24,9 @@ include:
 #      file: jobs/building/containers/kaniko-ecr.gitlab-ci.yml
 #  stages:
 #    - build
+#  variables:
+#    ARS_AWS_PROFILE: "<team>-<aws env>"
+#    ARS_AWS_ROLE_TO_ASSUME: "arn:aws:iam:<id>:role/<role_name>"
 #  job1:
 #    extends: .kaniko_ecr
 #    script:
