feat: TVOTTTM-536: sonarqube job
fix: TVOTTTM-xxx: Add molecule tag to molecule job

This should lessen the overload of queue blockage for other jobs as 3 workers per runner remain untagged.
This will increase test time and update cycle of ansible roles however.

feat: TVOTTTM-536: Start out building our ideal pipeline: testing steps

chore: TVOTTTM-536: switch ansible test pipeline to include recommended test steps

--- a/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
+++ b/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
@@ -25,6 +25,8 @@ molecule:
     MOLECULE_TEST_CMD_OPTS: ''
   parallel: 4
   stage: test
+  tags:
+    - molecule
   image: $REGISTRY/automation/containers/ansible-molecule:production
   script:
     - |-
