--- a/pipelines/ansible.gitlab-ci.yml
+++ b/pipelines/ansible.gitlab-ci.yml
@@ -9,8 +9,7 @@
 #     file: pipelines/ansible.gitlab-ci.yml
 
 include:
-  - template: Security/Secret-Detection.gitlab-ci.yml
-  - template: Security/SAST.gitlab-ci.yml
+  - local: /pipelines/recommended-test-jobs.gitlab-ci.yml
   - local: /jobs/testing/ansible/ansible-lint.gitlab-ci.yml
   - local: /jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
   #- local: /jobs/testing/ansible/ansible-test.gitlab-ci.yml
