fix: TVOTTTM-xxx: move variables to declaration where possible
seems midway variable declare might cause variable to be not known/defined on later places (eg sonar host became fallback to localhost:9000 for sonar scanner)

--- a/jobs/testing/qa/sonarqube.gitlab-ci.yml
+++ b/jobs/testing/qa/sonarqube.gitlab-ci.yml
@@ -49,8 +49,12 @@
 sonarqube:
   stage: test
   variables:
-    SONAR_PROJECT_TAGS: ""
+    SONAR_HOST_URL: "${SONARQUBE_PROD_URL}"
+    SONAR_TOKEN: "${SONARQUBE_PROD_TOKEN}"
     SONAR_USE_TEST_ENVIRONMENT: "false"
+    SONAR_PROJECT_KEY: "project-$CI_PROJECT_ID"
+    SONAR_PROJECT_NAME: "$CI_PROJECT_PATH"
+    SONAR_PROJECT_TAGS: ""
   image: 
     name: sonarsource/sonar-scanner-cli:4
     entrypoint: [""]
@@ -63,20 +67,8 @@ sonarqube:
       then
         SONAR_HOST_URL=${SONARQUBE_TEST_URL}
         SONAR_TOKEN=${SONARQUBE_TEST_TOKEN}
-      else
-        SONAR_HOST_URL=${SONARQUBE_PROD_URL}
-        SONAR_TOKEN=${SONARQUBE_PROD_TOKEN}
       fi
-      if [ "$SONAR_PROJECT_KEY" != "" ]
-      then
-        SONAR_PROJECT_KEY=${SONAR_PROJECT_KEY/[^a-zA-Z0-9-_\.]/.}
-      else
-        SONAR_PROJECT_KEY="project-$CI_PROJECT_ID"
-      fi
-      if [ "$SONAR_PROJECT_NAME" == "" ]
-      then
-        SONAR_PROJECT_NAME=$CI_PROJECT_PATH
-      fi
+      SONAR_PROJECT_KEY=${SONAR_PROJECT_KEY/[^a-zA-Z0-9-_\.]/.}
       git fetch --unshallow
     - >
       sonar-scanner
