test: TVOTTTM-549: anssible 8 test branch

--- a/jobs/testing/ansible/ansible-lint.gitlab-ci.yml
+++ b/jobs/testing/ansible/ansible-lint.gitlab-ci.yml
@@ -14,13 +14,13 @@
 
 yamllint:
   stage: test
-  image: $REGISTRY/automation/containers/ansible-molecule:production
+  image: $REGISTRY/automation/containers/ansible-molecule:ansible8-python3.9-latest
   script:
     - yamllint .
 
 # ansible-lint:
 #   stage: test
-#   image: $REGISTRY/automation/containers/ansible-molecule:production
+#   image: $REGISTRY/automation/containers/ansible-molecule:ansible8-python3.9-latest
 #   script:
 #     - ansible-lint
 
