--- a/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
+++ b/jobs/testing/ansible/ansible-molecule.gitlab-ci.yml
@@ -27,7 +27,7 @@ molecule:
   stage: test
   tags:
     - molecule
-  image: $REGISTRY/automation/containers/ansible-molecule:production
+  image: $REGISTRY/automation/containers/ansible-molecule:ansible8-python3.9-latest
   script:
     - |-
       set -x
